[package]
name = "librsvg_c_api"
version = "0.0.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
workspace = "../"
edition = "2018"

[lib]
name = "rsvg_c_api"
path = "lib.rs"
crate-type = [ "staticlib" ]

[dependencies]
bitflags = "1.0"
cairo-rs = { version="0.7.0", features=["v1_16"] }
cairo-sys-rs = "0.9.0"
gdk-pixbuf = "0.7.0"
gdk-pixbuf-sys = "0.9.0"
glib = { version="0.8.0", features=["subclassing"] }
glib-sys = "0.9.0"
gio = { version="0.7.0", features=["v2_48"] } # per configure.ac
gio-sys = "0.9.0"
gobject-sys = "0.9.0"
libc = "0.2"
rsvg_internals = { path = "../rsvg_internals" }
url = "2"
