[package]
name = "librsvg_c_api"
version = "0.0.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
workspace = "../"
edition = "2018"

[lib]
name = "rsvg_c_api"
path = "lib.rs"
crate-type = [ "staticlib", "rlib" ]

[dependencies]
bitflags = "1.0"
cairo-rs = { version="0.8.0", features=["v1_16"] }
cairo-sys-rs = "0.9.0"
cast = "0.2.3"
gdk-pixbuf = "0.8.0"
gdk-pixbuf-sys = "0.9.0"
glib = "0.9.0"
glib-sys = { version="0.9.0", features=["v2_50"] }
gio = { version="0.8.0", features=["v2_50"] } # per configure.ac
gio-sys = "0.9.0"
gobject-sys = "0.9.0"
libc = "0.2"
rgb = { version="0.8.17", features=["argb"] }
rsvg_internals = { path = "../rsvg_internals" }
url = "2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pixbuf_from_surface"
harness = false
