[package]
name = "librsvg"
version = "2.46.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
workspace = "../"
build = "build.rs"
edition = "2018"

[lib]
name = "librsvg"

[dependencies]
cairo-rs = "0.7.0"
glib = "0.8.0"
gio = { version="0.7.0", features=["v2_48"] } # per configure.ac
rsvg_internals = { path = "../rsvg_internals" }
url = "2"

[dev-dependencies]
cairo-rs = { version = "0.7.0", features = ["png", "svg"] }
rsvg_internals = { path = "../rsvg_internals" }

[build-dependencies]
pkg-config = "0.3.14"
