[package]
name = "librsvg"
version = "2.49.3"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
workspace = "../"
edition = "2018"

[lib]
name = "librsvg"

[dependencies]
cairo-rs = "0.9.1"
glib = "0.10.1"
gio = { version="0.9.0", features=["v2_50"] } # per configure.ac
rsvg_internals = { path = "../rsvg_internals" }
url = "2"

[dev-dependencies]
cairo-rs = { version = "0.9.0", features = ["png", "pdf", "svg"] }
rsvg_internals = { path = "../rsvg_internals" }
