[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.8"
libc = "0.2"
atk-sys = "0.4.0"
cairo-sys-rs = "0.4.0"
gdk-pixbuf-sys = "0.4.0"
gdk-sys = "0.4.0"
gio-sys = "0.4.0"
glib-sys = "0.4.0"
gobject-sys = "0.4.0"
pango-sys = "0.4.0"

[lib]
name = "rsvg_sys"

[package]
build = "build.rs"
links = "rsvg"
name = "rsvg-sys"
version = "0.3.4"
authors = ["selaux"]
description = "Rust bindings for the Rsvg library (ffi)"
repository = "https://github.com/selaux/rsvg-rs"
license = "MIT"
