[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
atk-sys = "0.4.0"
bitflags = "0.9"
cairo-sys-rs = "0.4.0"
gdk-pixbuf-sys = "0.4.0"
gdk-sys = "0.4.0"
gio-sys = "0.4.0"
glib-sys = "0.4.0"
gobject-sys = "0.4.0"
libc = "0.2"
pango-sys = "0.4.0"

[features]

[lib]
name = "rsvg_sys"

[package]
authors = ["selaux"]
build = "build.rs"
description = "Rust bindings for the Rsvg library (ffi)"
license = "MIT"
links = "rsvg"
name = "rsvg-sys"
repository = "https://github.com/selaux/rsvg-rs"
version = "0.3.4"
