[package]
name = "rsvg"
documentation = "https://gnome.pages.gitlab.gnome.org/librsvg/doc/rsvg/index.html"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["tests/fixtures", "tests/resources" ]

[package.metadata.system-deps]
cairo = "1.17"
cairo-gobject = "1.17"
cairo-png = "1.17"
cairo-pdf = { version = "1.17", optional = true }
cairo-ps = { version = "1.17", optional = true }
cairo-svg = { version = "1.17", optional = true }
freetype2 = "20.0.14"
gdk-pixbuf = { name = "gdk-pixbuf-2.0", version = "2.20" }
gio = { name = "gio-2.0", version = "2.24" }
glib = { name = "glib-2.0", version = "2.50" }
harfbuzz = "2.0"
libxml2 = { name = "libxml-2.0", fallback-names = ["libxml2"], version = "2.9" }
pangocairo = "1.46"

[package.metadata.system-deps.'cfg(windows)']
fontconfig = { version = "1.7", optional = true }
pangoft2 = { version = "1.46", optional = true }

[package.metadata.system-deps.'cfg(not(windows))']
fontconfig = { version = "1.7" }
pangoft2 = { version = "1.46" }

[features]
c-api = []
test-utils = ["yeslogic-fontconfig-sys"]

[lib]
name = "rsvg"

[dependencies]
# Keep these in sync with respect to the cairo-rs version:
#   src/lib.rs - toplevel example in the docs
byteorder = "1.4"
cairo-rs = { version = "0.18", features=["v1_16", "png", "pdf", "ps", "svg"] }
cast = "0.3.0"
cssparser = "0.29.0"
data-url = "0.3.0"
encoding_rs = "0.8.32"
float-cmp = "0.9.0"
gdk-pixbuf = "0.18"
gio = "0.18"
glib = "0.18"
itertools = "0.11.0"
language-tags = "0.3.1"
libc = "0.2"
locale_config = "*" # recommended explicitly by locale_config's README.md
markup5ever = "0.11.0"
nalgebra = "0.32.1"
num-traits = "0.2"
once_cell = "1.2.0"
pango = { version = "0.18", features = ["v1_46"] }
pangocairo = "0.18"
rayon = "1"
rctree = "0.5.0"
regex = "1.7.1"
rgb = { version="0.8", features=["argb"] }
selectors = "0.24.0"
string_cache = "0.8.0"
tinyvec = { version = "1.2.0", features = ["alloc", "rustc_1_55"] }
url = "2"
xml5ever = "0.17.0"

[target.'cfg(not(windows))'.dependencies]
yeslogic-fontconfig-sys = { version = "4.0.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
criterion = "0.5"
lopdf = "0.31"
matches = "0.1"
png = "0.17.2"
predicates = "3.0.3"
proptest = "1.0.0"
quick-error = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[build-dependencies]
system-deps = "6.0.0"

[[bench]]
name = "box_blur"
harness = false

[[bench]]
name = "composite"
harness = false

[[bench]]
name = "lighting"
harness = false

[[bench]]
name = "path_parser"
harness = false

[[bench]]
name = "pixbuf_from_surface"
harness = false

[[bench]]
name = "pixel_iterators"
harness = false

[[bench]]
name = "pixel_ops"
harness = false

[[bench]]
name = "srgb"
harness = false

[[bench]]
name = "surface_from_pixbuf"
harness = false
