[package]
name = "librsvg"
documentation = "https://gnome.pages.gitlab.gnome.org/librsvg/doc/rsvg/index.html"
version = "2.58.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["tests/fixtures", "tests/resources" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.system-deps]
cairo = "1.17"
cairo-gobject = "1.17"
cairo-png = "1.17"
cairo-pdf = { version = "1.17", optional = true }
cairo-ps = { version = "1.17", optional = true }
cairo-svg = { version = "1.17", optional = true }
freetype2 = "20.0.14"
gio = { name = "gio-2.0", version = "2.24" }
glib = { name = "glib-2.0", version = "2.50" }
harfbuzz = "2.0"
libxml2 = { name = "libxml-2.0", fallback-names = ["libxml2"], version = "2.9" }
pangocairo = "1.50"

[package.metadata.system-deps.'cfg(any(target_os = "macos", target_os = "windows"))']
fontconfig = { version = "1.7", optional = true }
pangoft2 = { version = "1.50", optional = true }

[package.metadata.system-deps.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))']
fontconfig = { version = "1.7" }
pangoft2 = { version = "1.50" }

[features]
c-api = []
test-utils = ["yeslogic-fontconfig-sys"]

[lib]
name = "rsvg"

[dependencies]
# Keep these in sync with respect to the cairo-rs version:
#   src/lib.rs - toplevel example in the docs
cairo-rs = { version = "0.19", features=["v1_16", "png", "pdf", "ps", "svg"] }
cast = "0.3.0"
cssparser = "~0.31"
data-url = "0.3.0"
encoding_rs = "0.8.32"
float-cmp = "0.9.0"
gio = "0.19"
glib = "0.19"
image = "0.24.7"
itertools = "0.12.0"
language-tags = "0.3.1"
libc = "0.2"
locale_config = "0.3.0" # not "*" as per the documentation, since crates.io doesn't accept wildcards
markup5ever = "0.11.0"
nalgebra = "0.32.1"
num-traits = "0.2"
pango = { version = "0.19", features = ["v1_46"] }
pangocairo = "0.19"
rayon = "1"
rctree = "0.6.0"
regex = "1.7.1"
rgb = { version="0.8", features=["argb"] }
selectors = "0.25.0"
string_cache = "0.8.0"
tinyvec = { version = "1.2.0", features = ["alloc", "rustc_1_55"] }
url = "2"
xml5ever = "0.17.0"

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
yeslogic-fontconfig-sys = { version = "4.0.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
criterion = "0.5"
lopdf = "0.32"
matches = "0.1"
png = "0.17.2"
predicates = "3.0.3"
proptest = "1.0.0"
quick-error = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[build-dependencies]
system-deps = "6.0.0"

[[bench]]
name = "box_blur"
harness = false

[[bench]]
name = "composite"
harness = false

[[bench]]
name = "lighting"
harness = false

[[bench]]
name = "path_parser"
harness = false

[[bench]]
name = "pixel_iterators"
harness = false

[[bench]]
name = "pixel_ops"
harness = false

[[bench]]
name = "srgb"
harness = false
