[package]
name = "rsvg_convert"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# So that we can use an rsvg-convert name instead of the default rsvg_convert
autobins = false

[package.metadata.system-deps]
cairo-pdf = { version = "1.17", optional = true }
cairo-ps = { version = "1.17", optional = true }
cairo-svg = { version = "1.17", optional = true }

[dependencies]
# Keep these in sync with respect to the cairo-rs version:
#   src/lib.rs - toplevel example in the docs
cairo-rs = { version = "0.19", features=["v1_18", "v1_16", "pdf", "ps", "svg"] }
cast = "0.3.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
clap = { version = "4.0.17", features = ["cargo", "derive"] } # rsvg-convert
clap_complete = "4.0.5" # rsvg-convert
cssparser = "~0.31"
gio = "0.19"
glib = "0.19"
libc = "0.2"
librsvg = { path = "../rsvg" }
librsvg-c = { path = "../librsvg-c" }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "3.0.3"
tempfile = "3"
url = "2"
lopdf = "0.32"
png = "0.17.2"
float-cmp = "0.9.0"
librsvg = { path = "../rsvg", features = ["test-utils"] }

[build-dependencies]
system-deps = "6.0.0"

[[bin]]
name = "rsvg-convert"
path = "src/main.rs"
