[package]
name = "rsvg_internals"
version = "0.0.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
workspace = "../"
build = "build.rs"
edition = "2018"

[dependencies]
cairo-rs = { version="0.7.0", features=["v1_16"] }
cairo-sys-rs = "0.9.0"
cssparser = "0.27.1"
data-url = "0.1"
downcast-rs = "^1.0.0"
encoding = "0.2.33"
float-cmp = "0.5.2"
gdk-pixbuf = "0.7.0"
gdk-pixbuf-sys = "0.9.0"
gio = { version="0.7.0", features=["v2_48"] } # per configure.ac
gio-sys = "0.9.0"
glib = { version="0.8.0" }
glib-sys = "0.9.0"
itertools = "0.8"
language-tags = "0.2.2"
libc = "0.2"
locale_config = "*" # recommended explicitly by locale_config's README.md
markup5ever = "0.10"
nalgebra = "0.18"
num-traits = "0.2"
once_cell = "1.2.0"
pango = "0.7.0"
pango-sys = "0.9.0"
pangocairo = "0.8.0"
phf = "0.7.21"
rayon = "1"
rctree = "0.3.3"
regex = "1"
selectors = "0.22.0"
url = "2"
xml-rs = "0.8.0"

[dev-dependencies]
criterion = "0.2"

[build-dependencies]
pkg-config = "0.3.14"

[lib]
name = "rsvg_internals"

[[bench]]
name = "box_blur"
harness = false

[[bench]]
name = "composite"
harness = false

[[bench]]
name = "lighting"
harness = false

[[bench]]
name = "pixel_iterators"
harness = false

[[bench]]
name = "srgb"
harness = false
